--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
@@ -168,6 +168,8 @@ select#quote-input option {
     ::ng-deep
     .p-dropdown .p-dropdown-label {
         padding: 3px;
+        font-size: 14px;
+        color: #000;
     }
 
     ::ng-deep
@@ -186,4 +188,13 @@ select#quote-input option {
       font-weight: 400;
       line-height: normal;
     }
+    .custom-width-20 {
+      width: 18%;
+      /* padding-right: 10px; */
+  }
+
+  .custom-width-80 {
+      width: 82%;
+  }
+  
     
